<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.romel.expensetracker.MainActivity">

    <TextView
        android:id="@+id/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/ExpenseTotalText"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expenseTotalText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintTop_toBottomOf="@+id/TitleText"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/ExpenseTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0.00"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@+id/ExpenseTotalText"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/TitleText"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/ExpenseHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expenseHistoryText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/MiscText"
        app:layout_constraintHorizontal_bias="0.158" />

    <TextView
        android:id="@+id/addExpenseID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addExpenseText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/ExpenseTotalText" />

    <Spinner
        android:id="@+id/ExpenseSpinner"
        android:layout_width="343dp"
        android:layout_height="59dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/AmountText"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/AmountText"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:hint="@string/amtTextHint"
        app:layout_constraintLeft_toRightOf="@+id/addExpenseID"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/ExpenseTotalText" />

    <Button
        android:id="@+id/AddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"
        app:layout_constraintLeft_toRightOf="@+id/AmountText"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/ExpenseSpinner"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center_horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/DadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dadString"
        android:layout_marginLeft="8dp"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/ExpenseSpinner"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/PrevMonthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prev Month: $0.00"
        android:layout_marginLeft="8dp"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DadText"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/FoodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodString"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/PrevMonthText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/GasText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gasString"
        android:textSize="20dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/FoodText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/MiscText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miscString"
        android:textSize="20dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/GasText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/ResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset Expenses"
        android:layout_gravity="center_horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/MiscText" />

</android.support.constraint.ConstraintLayout>
